--- a/src/MvcTemplate.Web/wwwroot/css/shared/overrides.css
+++ b/src/MvcTemplate.Web/wwwroot/css/shared/overrides.css
@@ -129,6 +129,19 @@ hr {
     border-color: #ced4da;
 }
 
+.form-select.input-validation-error,
+.form-control.input-validation-error,
+.form-check-input.input-validation-error {
+    border-color: #dc3545;
+}
+
+.form-select.input-validation-error:focus,
+.form-control.input-validation-error:focus,
+.form-check-input.input-validation-error:focus {
+    box-shadow: 0 0 0 0.25rem rgb(220 53 69 / 0.25);
+    border-color: #dc3545;
+}
+
 .form-check-label {
     border: 1px solid transparent;
     padding: 0.375rem 0;
@@ -245,10 +258,11 @@ hr {
     text-align: left !important;
 }
 
-.mvc-lookup-readonly .mvc-lookup-browser:focus,
-.mvc-lookup-readonly.mvc-lookup-focus .mvc-lookup-control {
+.mvc-lookup-rows:focus,
+.mvc-lookup-search:focus {
     box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 0.25);
-    border-color: #ced4da;
+    border-color: #86b7fe;
+    position: relative;
     outline: none;
 }
 
@@ -259,16 +273,18 @@ hr {
     outline: none;
 }
 
-.mvc-lookup-rows:focus,
-.mvc-lookup-search:focus {
+.mvc-lookup-readonly .mvc-lookup-control,
+.mvc-lookup-readonly .mvc-lookup-browser:focus {
     box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 0.25);
-    border-color: #86b7fe;
-    position: relative;
+    border-color: #ced4da;
     outline: none;
 }
 
-.mvc-lookup-browser:focus.input-validation-error,
-.mvc-lookup-focus .mvc-lookup-control.input-validation-error {
+.mvc-lookup-invalid .mvc-lookup-control {
+    border-color: #dc3545;
+}
+
+.mvc-lookup-invalid.mvc-lookup-focus .mvc-lookup-control {
     box-shadow: 0 0 0 0.25rem rgb(220 53 69 / 0.25);
     border-color: #dc3545;
 }
