--- a/src/MvcTemplate.Web/Templates/Module/Tests/ControllerTests.cshtml
+++ b/src/MvcTemplate.Web/Templates/Module/Tests/ControllerTests.cshtml
@@ -7,6 +7,7 @@ using MvcTemplate.Validators;
 
 namespace @Model.ControllerNamespace;
 
+[Collection("Database access")]
 public class @(Model.Controller)Tests : IDisposable
 {
     private DbContext context;
